Added Car on Track

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f6ebb160",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pygame\n",
@@ -41,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -77,12 +60,26 @@
     "            if event.key==pygame.K_s:\n",
     "                pygame.image.save(screen,\"track.png\")         #saving the track image\n",
     "    pygame.display.update()\n",
-    "pygame.quit()"
+    "    #Car Image creation.\n",
+    "    car_img = pygame.image.load(\"Track_images/car.png\").convert_alpha()\n",
+    "    car_img = pygame.transform.scale(car_img, (40, 20)) \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ec1fd998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car_img = pygame.image.load(\"Track_images/car.png\").convert_alpha()\n",
+    "car_img = pygame.transform.scale(car_img, (80, 40)) \n",
+    "pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [
@@ -92,8 +89,8 @@
      "text": [
       "<>:5: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:5: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Yash\\AppData\\Local\\Temp\\ipykernel_25512\\2254944510.py:5: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  track_image=pygame.image.load(\"Track_images\\silverstone_track.png\").convert()\n"
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_5780\\3175602107.py:5: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  track_image=pygame.image.load(\"Track_images\\silverstone_track.png\").convert()  #loading the track image\n"
      ]
     }
    ],
@@ -109,16 +106,25 @@
     "        if event.type==pygame.QUIT:   #closing the event/program after clicking the close button\n",
     "            running=False\n",
     "    screen.fill((120,120,120))   #filling the screen with a color (gray)\n",
-    "    screen.blit(track_image, (0, 0))   #drawing the track image on the screen\n",
+    "    screen.blit(track_image, (0, 0))\n",
+    "    screen.blit(car_img, (100, 100))   #drawing the car image on the screen\n",
     "    pygame.display.update()           #updating the display\n",
     "    clock.tick(60)     #setting the frame rate\n",
     "pygame.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "823c5ef8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.13.7)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
