Removed Hard Coded Co-ordinate

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f6ebb160",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\Neural-Networks-Car-Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import resource_stream, resource_exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pygame\n",
@@ -24,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -62,52 +79,49 @@
     "    pygame.display.update()\n",
     "    #Car Image creation.\n",
     "    car_img = pygame.image.load(\"Track_images/car.png\").convert_alpha()\n",
-    "    car_img = pygame.transform.scale(car_img, (40, 20)) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec1fd998",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "car_img = pygame.image.load(\"Track_images/car.png\").convert_alpha()\n",
-    "car_img = pygame.transform.scale(car_img, (80, 40)) \n",
+    "    car_img = pygame.transform.scale(car_img, (40, 20)) \n",
     "pygame.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
+   "id": "ec1fd998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pygame.init()\n",
+    "screen = pygame.display.set_mode((1280, 720))\n",
+    "car_img = pygame.image.load(\"Track_images/car.png\").convert_alpha()\n",
+    "car_img = pygame.transform.scale(car_img, (50, 30))\n",
+    "pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "7e04541e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:5: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "<>:5: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_5780\\3175602107.py:5: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  track_image=pygame.image.load(\"Track_images\\silverstone_track.png\").convert()  #loading the track image\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pygame.init()  #start the program\n",
     "screen = pygame.display.set_mode((1280,720))  #setting the size of the screen \n",
     "clock=pygame.time.Clock()   #time for clock/ frame rate \n",
     "pygame.display.set_caption(\"Car Simulation\")  #setting the title of the window\n",
-    "track_image=pygame.image.load(\"Track_images\\silverstone_track.png\").convert()  #loading the track image\n",
+    "track_image=pygame.image.load(r\"Track_images\\silverstone_track.png\").convert()  #loading the track image\n",
     "running =True\n",
+    "x,y = 897, 379\n",
+    "speed =0\n",
+    "angle = 0\n",
+    "car_img = pygame.transform.rotate(car_img, 290)\n",
     "while running:\n",
     "    for event in pygame.event.get():  #checking for event\n",
     "        if event.type==pygame.QUIT:   #closing the event/program after clicking the close button\n",
     "            running=False\n",
     "    screen.fill((120,120,120))   #filling the screen with a color (gray)\n",
     "    screen.blit(track_image, (0, 0))\n",
-    "    screen.blit(car_img, (100, 100))   #drawing the car image on the screen\n",
+    "    rect = car_img.get_rect(center=(x, y))\n",
+    "    screen.blit(car_img, rect.topleft)   #drawing the car image on the screen\n",
     "    pygame.display.update()           #updating the display\n",
     "    clock.tick(60)     #setting the frame rate\n",
     "pygame.quit()"
