Car Movement Initialized

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,31 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f6ebb160",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\PC\\Neural-Networks-Car-Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pygame\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "08e17ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCREEN_WIDTH, SCREEN_HEIGHT = 1280, 720\n",
+    "BG_COLOR = (120, 120, 120)\n",
+    "\n",
+    "DRAW_COLOR = (50, 50, 50)\n",
+    "DRAW_RADIUS = 2\n",
+    "ERASE_RADIUS = 5\n",
+    "\n",
+    "CAR_WIDTH, CAR_HEIGHT = 50, 30\n",
+    "DEFAULT_START_X, DEFAULT_START_Y = 897, 379\n",
+    "DEFAULT_START_ANGLE = 290\n",
+    "DEFAULT_START_SPEED = 2\n",
+    "\n",
+    "TRACK_SAVE_PATH = \"track.png\"\n",
+    "CAR_IMAGE_PATH = \"Track_images/car.png\"\n",
+    "TRACK_IMAGE_PATH = r\"Track_images\\silverstone_track.png\"\n"
    ]
   },
   {
@@ -46,91 +53,120 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pygame.init()\n",
-    "pygame.display.set_caption(\"drawing the track, press 'S' to save as image.\")\n",
-    "screen=pygame.display.set_mode((1280,720))\n",
-    "screen.fill((120,120,120))\n",
-    "running=True\n",
-    "drawing=False\n",
-    "erase=False\n",
-    "while running:\n",
-    "    for event in pygame.event.get():   #quitting is close is pressed\n",
-    "        if event.type==pygame.QUIT:\n",
-    "            running=False\n",
-    "        if event.type==pygame.MOUSEBUTTONDOWN:    #checking if button is pressed \n",
-    "            if event.button==1:\n",
-    "                drawing=True\n",
-    "            elif event.button==3:\n",
-    "                erase=True\n",
-    "        if event.type==pygame.MOUSEBUTTONUP:      #checking if button is released\n",
-    "            if event.button==1:\n",
-    "                drawing=False\n",
-    "            elif event.button==3:\n",
-    "                erase=False\n",
-    "        if event.type==pygame.MOUSEMOTION:         #tracking the mouse pointer \n",
-    "            mouse_pos=pygame.mouse.get_pos()\n",
-    "            if drawing:\n",
-    "                pygame.draw.circle(screen,(50,50,50),mouse_pos,2)     #hilighting the path of the mouse\n",
-    "            elif erase:\n",
-    "                pygame.draw.circle(screen,(120,120,120),mouse_pos,5)     #erasing the path of the mouse\n",
-    "        if event.type==pygame.KEYDOWN:\n",
-    "            if event.key==pygame.K_s:\n",
-    "                pygame.image.save(screen,\"track.png\")         #saving the track image\n",
-    "    pygame.display.update()\n",
-    "    #Car Image creation.\n",
-    "    car_img = pygame.image.load(\"Track_images/car.png\").convert_alpha()\n",
-    "    car_img = pygame.transform.scale(car_img, (40, 20)) \n",
-    "pygame.quit()"
+    "def draw_track():\n",
+    "    pygame.init()\n",
+    "    pygame.display.set_caption(\"Drawing the track, press 'S' to save as image.\")\n",
+    "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "    screen.fill(BG_COLOR)\n",
+    "\n",
+    "    running, drawing, erase = True, False, False\n",
+    "\n",
+    "    while running:\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                running = False\n",
+    "            elif event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                if event.button == 1:\n",
+    "                    drawing = True\n",
+    "                elif event.button == 3:\n",
+    "                    erase = True\n",
+    "            elif event.type == pygame.MOUSEBUTTONUP:\n",
+    "                if event.button == 1:\n",
+    "                    drawing = False\n",
+    "                elif event.button == 3:\n",
+    "                    erase = False\n",
+    "            elif event.type == pygame.MOUSEMOTION:\n",
+    "                mouse_pos = pygame.mouse.get_pos()\n",
+    "                if drawing:\n",
+    "                    pygame.draw.circle(screen, DRAW_COLOR, mouse_pos, DRAW_RADIUS)\n",
+    "                elif erase:\n",
+    "                    pygame.draw.circle(screen, BG_COLOR, mouse_pos, ERASE_RADIUS)\n",
+    "            elif event.type == pygame.KEYDOWN and event.key == pygame.K_s:\n",
+    "                pygame.image.save(screen, TRACK_SAVE_PATH)\n",
+    "\n",
+    "        pygame.display.update()\n",
+    "    pygame.quit()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "ec1fd998",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pygame.init()\n",
-    "screen = pygame.display.set_mode((1280, 720))\n",
-    "car_img = pygame.image.load(\"Track_images/car.png\").convert_alpha()\n",
-    "car_img = pygame.transform.scale(car_img, (50, 30))\n",
-    "pygame.quit()"
+    "class Car:\n",
+    "    def __init__(self, image_path, x, y, angle=0, speed=0):\n",
+    "        image = pygame.image.load(image_path).convert_alpha()\n",
+    "        self.image = pygame.transform.scale(image, (CAR_WIDTH, CAR_HEIGHT))\n",
+    "        self.x, self.y = x, y\n",
+    "        self.angle = angle\n",
+    "        self.speed = speed\n",
+    "\n",
+    "    def move(self):\n",
+    "        rad = np.radians(self.angle)\n",
+    "        self.x += self.speed * np.cos(rad)\n",
+    "        self.y -= self.speed * np.sin(rad)\n",
+    "\n",
+    "    def draw(self, screen):\n",
+    "        rotated_img = pygame.transform.rotate(self.image, -self.angle)\n",
+    "        rect = rotated_img.get_rect(center=(self.x, self.y))\n",
+    "        screen.blit(rotated_img, rect.topleft)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pygame.init()  #start the program\n",
-    "screen = pygame.display.set_mode((1280,720))  #setting the size of the screen \n",
-    "clock=pygame.time.Clock()   #time for clock/ frame rate \n",
-    "pygame.display.set_caption(\"Car Simulation\")  #setting the title of the window\n",
-    "track_image=pygame.image.load(r\"Track_images\\silverstone_track.png\").convert()  #loading the track image\n",
-    "running =True\n",
-    "x,y = 897, 379\n",
-    "speed =0\n",
-    "angle = 0\n",
-    "car_img = pygame.transform.rotate(car_img, 290)\n",
-    "while running:\n",
-    "    for event in pygame.event.get():  #checking for event\n",
-    "        if event.type==pygame.QUIT:   #closing the event/program after clicking the close button\n",
-    "            running=False\n",
-    "    screen.fill((120,120,120))   #filling the screen with a color (gray)\n",
-    "    screen.blit(track_image, (0, 0))\n",
-    "    rect = car_img.get_rect(center=(x, y))\n",
-    "    screen.blit(car_img, rect.topleft)   #drawing the car image on the screen\n",
-    "    pygame.display.update()           #updating the display\n",
-    "    clock.tick(60)     #setting the frame rate\n",
-    "pygame.quit()"
+    "def run_simulation(start_x=DEFAULT_START_X, \n",
+    "                   start_y=DEFAULT_START_Y, \n",
+    "                   start_angle=DEFAULT_START_ANGLE, \n",
+    "                   start_speed=DEFAULT_START_SPEED):\n",
+    "    pygame.init()\n",
+    "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "    clock = pygame.time.Clock()\n",
+    "    pygame.display.set_caption(\"Car Simulation\")\n",
+    "\n",
+    "    track_image = pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
+    "    car = Car(CAR_IMAGE_PATH, start_x, start_y, start_angle, start_speed)\n",
+    "\n",
+    "    running = True\n",
+    "    while running:\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                running = False\n",
+    "\n",
+    "        screen.fill(BG_COLOR)\n",
+    "        screen.blit(track_image, (0, 0))\n",
+    "\n",
+    "        car.move()\n",
+    "        car.draw(screen)\n",
+    "\n",
+    "        pygame.display.update()\n",
+    "        clock.tick(60)\n",
+    "\n",
+    "    pygame.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "823c5ef8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    # draw_track()\n",
+    "    run_simulation()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "823c5ef8",
+   "id": "5902fbd8",
    "metadata": {},
    "outputs": [],
    "source": []
