--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f6ebb160",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#required libraries\n",
     "import numpy as np\n",
@@ -32,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -49,6 +32,10 @@
     "DEFAULT_START_X, DEFAULT_START_Y = 897, 380\n",
     "DEFAULT_START_ANGLE = 78\n",
     "DEFAULT_START_SPEED = 0\n",
+    "\n",
+    "ACCELERATION = 0.1\n",
+    "FRICTION = 0.05\n",
+    "TURN_ANGLE = 2\n",
     "\n",
     "TRACK_SAVE_PATH = \"track.png\"\n",
     "CAR_IMAGE_PATH = \"Track_images/car.png\"\n",
@@ -67,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -114,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "ec1fd998",
    "metadata": {},
    "outputs": [],
@@ -143,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
@@ -200,9 +187,22 @@
     "\n",
     "        screen.fill(BG_COLOR)\n",
     "        screen.blit(track_image, (0, 0))\n",
-    "        car.move()\n",
-    "        car.draw(screen)\n",
-    "        \n",
+    "\n",
+    "        # manage car speed and direction\n",
+    "        keys=pygame.key.get_pressed()\n",
+    "        car.speed-=FRICTION\n",
+    "        if abs(car.speed)<FRICTION:\n",
+    "            car.speed=0\n",
+    "        if keys[pygame.K_UP]:\n",
+    "            car.speed+=ACCELERATION\n",
+    "        if keys[pygame.K_DOWN]:\n",
+    "            car.speed-=ACCELERATION\n",
+    "        if car.speed != 0:\n",
+    "            if keys[pygame.K_LEFT]:\n",
+    "                car.angle+=TURN_ANGLE\n",
+    "            if keys[pygame.K_RIGHT]:\n",
+    "                car.angle-=TURN_ANGLE\n",
+    "                \n",
     "        # Ray casting\n",
     "        distance,sensor_endpoint=ray_casting(car,screen,track_image)\n",
     "        font=pygame.font.Font(None,22)\n",
@@ -210,6 +210,9 @@
     "        screen.blit(text_surface,(50,50))\n",
     "        for endpoint in sensor_endpoint:\n",
     "            pygame.draw.line(screen,(0,255,0),(car.x,car.y),endpoint,1)\n",
+    "            \n",
+    "        car.move()\n",
+    "        car.draw(screen)\n",
     "\n",
     "        \n",
     "        # collision detection\n",
@@ -233,9 +236,9 @@
     "            text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255)) \n",
     "            screen.blit(text_surface, (50, 65))  \n",
     "            # Reset car to start position and angle\n",
-    "            car.x, car.y = start_x, start_y\n",
-    "            car.angle = start_angle\n",
-    "            car.speed = start_speed\n",
+    "            # car.x, car.y = start_x, start_y\n",
+    "            # car.angle = start_angle\n",
+    "            # car.speed = start_speed\n",
     "\n",
     "        pygame.display.update()\n",
     "        clock.tick(60)\n",
@@ -245,10 +248,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "823c5ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "pixel index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m      2\u001b[39m     \u001b[38;5;66;03m# draw_track()\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[43mrun_simulation\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 36\u001b[39m, in \u001b[36mrun_simulation\u001b[39m\u001b[34m(start_x, start_y, start_angle, start_speed)\u001b[39m\n\u001b[32m     34\u001b[39m         car.angle-=TURN_ANGLE\n\u001b[32m     35\u001b[39m \u001b[38;5;66;03m# Ray casting\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m distance,sensor_endpoint=\u001b[43mray_casting\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcar\u001b[49m\u001b[43m,\u001b[49m\u001b[43mscreen\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtrack_image\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     37\u001b[39m font=pygame.font.Font(\u001b[38;5;28;01mNone\u001b[39;00m,\u001b[32m22\u001b[39m)\n\u001b[32m     38\u001b[39m text_surface=font.render(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDistances: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdistance\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m,\u001b[38;5;28;01mTrue\u001b[39;00m,(\u001b[32m255\u001b[39m,\u001b[32m255\u001b[39m,\u001b[32m255\u001b[39m))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mray_casting\u001b[39m\u001b[34m(car, screen, track_surface)\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[32m0\u001b[39m<=ray_x<SCREEN_WIDTH \u001b[38;5;129;01mor\u001b[39;00m \u001b[32m0\u001b[39m<=ray_y<SCREEN_HEIGHT):\n\u001b[32m     17\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m pixel_color=\u001b[43mtrack_surface\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_at\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mray_x\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mray_y\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m pixel_color==DRAW_COLOR:\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[31mIndexError\u001b[39m: pixel index out of range"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # draw_track()\n",
