Detection Logic Added

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f6ebb160",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\Neural-Networks-Car-Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import resource_stream, resource_exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "#required libraries\n",
     "import numpy as np\n",
@@ -15,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -28,9 +45,9 @@
     "DRAW_RADIUS = 2\n",
     "ERASE_RADIUS = 5\n",
     "\n",
-    "CAR_WIDTH, CAR_HEIGHT = 40, 20\n",
+    "CAR_WIDTH, CAR_HEIGHT = 20, 40\n",
     "DEFAULT_START_X, DEFAULT_START_Y = 897, 380\n",
-    "DEFAULT_START_ANGLE = 78\n",
+    "DEFAULT_START_ANGLE = 0\n",
     "DEFAULT_START_SPEED = 0\n",
     "\n",
     "ACCELERATION = 0.1\n",
@@ -54,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -101,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "ec1fd998",
    "metadata": {},
    "outputs": [],
@@ -123,41 +140,46 @@
     "        self.y -= self.speed * np.sin(rad)\n",
     "\n",
     "    def draw(self, screen):\n",
-    "        rotated_img = pygame.transform.rotate(self.image, -self.angle)\n",
+    "        rotated_img = pygame.transform.rotate(self.image, self.angle)\n",
     "        rect = rotated_img.get_rect(center=(self.x, self.y))\n",
     "        screen.blit(rotated_img, rect.topleft)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ray_casting(car,screen,track_surface):\n",
-    "    # Ray casting implementation\n",
-    "    sensor_distance=[]\n",
-    "    sensor_endpoint=[]\n",
-    "    sensor_angle=[-45,0,45]\n",
+    "def ray_casting(car, screen, track_surface):\n",
+    "    sensor_distance = []\n",
+    "    sensor_endpoint = []\n",
+    "    sensor_angle = [-45, 0, 45]\n",
+    "\n",
     "    for angle in sensor_angle:\n",
-    "        ray_angle=car.angle+angle\n",
-    "        ray_x,ray_y=car.x,car.y\n",
-    "        distance=0\n",
-    "        max_distance=200\n",
+    "        ray_angle = car.angle + angle\n",
+    "        ray_x, ray_y = car.x, car.y\n",
+    "        distance = 0\n",
+    "        max_distance = 200\n",
+    "\n",
     "        while distance < max_distance:\n",
-    "            rad=np.radians(ray_angle)+np.radians(car.angle+45)\n",
-    "            ray_x+=np.cos(rad)\n",
-    "            ray_y-=np.sin(rad)\n",
-    "            distance+=1\n",
-    "            if not (0<=ray_x<SCREEN_WIDTH or 0<=ray_y<SCREEN_HEIGHT):\n",
+    "            rad = np.radians(ray_angle)\n",
+    "            ray_x += np.cos(rad)\n",
+    "            ray_y -= np.sin(rad)  \n",
+    "            distance += 1\n",
+    "\n",
+    "            if not (0 <= ray_x < SCREEN_WIDTH and 0 <= ray_y < SCREEN_HEIGHT):\n",
     "                break\n",
-    "            pixel_color=track_surface.get_at((int(ray_x),int(ray_y)))\n",
-    "            if pixel_color==DRAW_COLOR:\n",
+    "\n",
+    "            pixel_color = track_surface.get_at((int(ray_x), int(ray_y)))[0:3]\n",
+    "            if pixel_color == DRAW_COLOR:\n",
     "                break\n",
+    "\n",
     "        sensor_distance.append(distance)\n",
-    "        sensor_endpoint.append((ray_x,ray_y))\n",
-    "    return sensor_distance,sensor_endpoint\n"
+    "        sensor_endpoint.append((ray_x, ray_y))\n",
+    "\n",
+    "    return sensor_distance, sensor_endpoint\n"
    ]
   },
   {
@@ -177,7 +199,15 @@
     "    pygame.display.set_caption(\"Car Simulation\")\n",
     "\n",
     "    track_image = pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
+    "    track_surface = track_image.copy()\n",
+    "\n",
     "    car = Car(CAR_IMAGE_PATH, start_x, start_y, start_angle, start_speed)\n",
+    "\n",
+    "    screen.fill(BG_COLOR)\n",
+    "    screen.blit(track_image, (0, 0))\n",
+    "\n",
+    "    \n",
+    "    CAR_ROAD_COLOR = track_surface.get_at((start_x, start_y))[:3]\n",
     "\n",
     "    running = True\n",
     "    while running:\n",
@@ -185,60 +215,58 @@
     "            if event.type == pygame.QUIT:\n",
     "                running = False\n",
     "\n",
-    "        screen.fill(BG_COLOR)\n",
+    "        keys = pygame.key.get_pressed()\n",
+    "        if car.speed > 0:\n",
+    "            car.speed -= FRICTION\n",
+    "        if car.speed < 0:\n",
+    "            car.speed += FRICTION\n",
+    "        if abs(car.speed) < FRICTION:\n",
+    "            car.speed = 0\n",
+    "        if keys[pygame.K_DOWN]:\n",
+    "            if car.speed < 0.5:\n",
+    "                car.speed -= ACCELERATION*2\n",
+    "            car.speed -= ACCELERATION\n",
+    "        if keys[pygame.K_UP]:\n",
+    "            car.speed += ACCELERATION\n",
+    "        if car.speed != 0:\n",
+    "            turn_factor = TURN_ANGLE * (car.speed / 5.0)\n",
+    "            if keys[pygame.K_LEFT]:\n",
+    "                car.angle += turn_factor\n",
+    "            if keys[pygame.K_RIGHT]:\n",
+    "                car.angle -= turn_factor\n",
+    "\n",
     "        screen.blit(track_image, (0, 0))\n",
     "\n",
-    "        # manage car speed and direction\n",
-    "        keys=pygame.key.get_pressed()\n",
-    "        car.speed-=FRICTION\n",
-    "        if abs(car.speed)<FRICTION:\n",
-    "            car.speed=0\n",
-    "        if keys[pygame.K_UP]:\n",
-    "            car.speed+=ACCELERATION\n",
-    "        if keys[pygame.K_DOWN]:\n",
-    "            car.speed-=ACCELERATION\n",
-    "        if car.speed != 0:\n",
-    "            if keys[pygame.K_LEFT]:\n",
-    "                car.angle+=TURN_ANGLE\n",
-    "            if keys[pygame.K_RIGHT]:\n",
-    "                car.angle-=TURN_ANGLE\n",
+    "        font = pygame.font.Font(None, 22)\n",
+    "        text_surface = font.render(f\"Speed: {car.speed:.2f}\", True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (50, 50))\n",
     "                \n",
-    "        # Ray casting\n",
-    "        distance,sensor_endpoint=ray_casting(car,screen,track_image)\n",
-    "        font=pygame.font.Font(None,22)\n",
-    "        text_surface=font.render(f\"Distances: {distance}\",True,(255,255,255))\n",
-    "        screen.blit(text_surface,(50,50))\n",
+    "        # ray casting\n",
+    "        distance, sensor_endpoint = ray_casting(car, screen,track_surface)\n",
+    "        text_surface = font.render(f\"Distances: {distance}\", True, (255, 255, 255))\n",
+    "        screen.blit(text_surface, (50, 80))\n",
     "        for endpoint in sensor_endpoint:\n",
-    "            pygame.draw.line(screen,(0,255,0),(car.x,car.y),endpoint,1)\n",
+    "            pygame.draw.line(screen, (0, 255, 0), (car.x, car.y), endpoint, 1)\n",
     "            \n",
     "        car.move()\n",
     "        car.draw(screen)\n",
     "\n",
-    "        \n",
     "        # collision detection\n",
-    "        ROAD_COLOR = DRAW_COLOR\n",
-    "\n",
     "        try:\n",
     "            car_center_pos = (int(car.x), int(car.y))\n",
-    "            pixel_color = screen.get_at(car_center_pos)\n",
-    "            if pixel_color == ROAD_COLOR:\n",
-    "                font = pygame.font.Font(None, 22)  \n",
+    "            pixel_color = track_surface.get_at(car_center_pos)[:3]\n",
+    "            if pixel_color != CAR_ROAD_COLOR:\n",
     "                text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255))  \n",
-    "                screen.blit(text_surface, (50, 65))  \n",
-    "                # Reset car to start position and angle\n",
+    "                screen.blit(text_surface, (50, 110))  \n",
     "                car.x, car.y = start_x, start_y\n",
     "                car.angle = start_angle\n",
     "                car.speed = start_speed\n",
-    "\n",
     "        except IndexError:\n",
-    "            # Car went off screen\n",
-    "            font = pygame.font.Font(None, 22)  \n",
     "            text_surface = font.render(\"Car has crashed!\", True, (255, 255, 255)) \n",
-    "            screen.blit(text_surface, (50, 65))  \n",
-    "            # Reset car to start position and angle\n",
-    "            # car.x, car.y = start_x, start_y\n",
-    "            # car.angle = start_angle\n",
-    "            # car.speed = start_speed\n",
+    "            screen.blit(text_surface, (50, 110))  \n",
+    "            car.x, car.y = start_x, start_y\n",
+    "            car.angle = start_angle\n",
+    "            car.speed = start_speed\n",
     "\n",
     "        pygame.display.update()\n",
     "        clock.tick(60)\n",
@@ -248,35 +276,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "823c5ef8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "pixel index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m      2\u001b[39m     \u001b[38;5;66;03m# draw_track()\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[43mrun_simulation\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 36\u001b[39m, in \u001b[36mrun_simulation\u001b[39m\u001b[34m(start_x, start_y, start_angle, start_speed)\u001b[39m\n\u001b[32m     34\u001b[39m         car.angle-=TURN_ANGLE\n\u001b[32m     35\u001b[39m \u001b[38;5;66;03m# Ray casting\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m distance,sensor_endpoint=\u001b[43mray_casting\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcar\u001b[49m\u001b[43m,\u001b[49m\u001b[43mscreen\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtrack_image\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     37\u001b[39m font=pygame.font.Font(\u001b[38;5;28;01mNone\u001b[39;00m,\u001b[32m22\u001b[39m)\n\u001b[32m     38\u001b[39m text_surface=font.render(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mDistances: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdistance\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m,\u001b[38;5;28;01mTrue\u001b[39;00m,(\u001b[32m255\u001b[39m,\u001b[32m255\u001b[39m,\u001b[32m255\u001b[39m))\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mray_casting\u001b[39m\u001b[34m(car, screen, track_surface)\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[32m0\u001b[39m<=ray_x<SCREEN_WIDTH \u001b[38;5;129;01mor\u001b[39;00m \u001b[32m0\u001b[39m<=ray_y<SCREEN_HEIGHT):\n\u001b[32m     17\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m pixel_color=\u001b[43mtrack_surface\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_at\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mray_x\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mray_y\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m pixel_color==DRAW_COLOR:\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[31mIndexError\u001b[39m: pixel index out of range"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # draw_track()\n",
@@ -286,7 +289,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5902fbd8",
+   "id": "996a339f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb2b6a61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.13.7)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
